client/src/App.css
@import 'tailwindcss';

.no-spinners::-webkit-outer-spin-button,
.no-spinners::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
}

::-webkit-scrollbar {
   width: 6px;
   height: 6px;
}

::-webkit-scrollbar-track {
   background: transparent;
}

::-webkit-scrollbar-thumb {
   background-color: #3f3f46;
   border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
   background-color: #52525b;
}

* {
   scrollbar-width: thin;
   scrollbar-color: #3f3f46 transparent;
}

